# AuRA

./: .env.example  README.md  app.py  aura_state.db  main.py  pyproject.toml  requirements.txt
aura/: __init__.py  agent.py  config.py  schemas.py  subagents.py  tools.py
workspace/: AGENTS.md
