[project]
name = "aura-research-agent"
version = "0.1.0"
description = "AuRA — Autonomous Research Agent: multi-agent research system built on deepagents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.4",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "arxiv>=4.0.0",
    "tavily-python>=0.7.17",
    "streamlit>=1.58.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0",
]
